# eiko_skelfm

./: .gitignore  CMakeLists.txt  README.md  license.txt  pyproject.toml  setup.py  shortestpath.m  skeleton.py
.github/workflows/: publish.yml
docs/: example_skeleton_2d.py
eiko_skelfm/: __init__.py  msfm.py  shortestpath.py  skeleton.py
src/: common.c  common.h  msfm2d.c  msfm2d.h  msfm3d.c  msfm3d.h  msfm_module.c  rk4.c  rk4.h
tests/: test_lib_build.py  test_memory_order.py  test_skeleton_2d.py  test_skeleton_3d.py
