[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=1.19"]
build-backend = "setuptools.build_meta"

[project]
name = "eiko-skelfm"
version = "0.1.0"
description = "Fast Marching Method - Python port of Kroon's toolbox"
readme = "README.md"
license = {text = "BSD 2-Clause"}
authors = [
    {name = "Fernando Julian Chaure"}
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["fast marching method", "skeleton"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19",
    "scipy>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "matplotlib>=3.5",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["eiko_skelfm"]

